[tr064] Improvements of Phonebook Profile (#9054)
* Improvements of Phonebook Profile