@@ -12,19 +12,23 @@
  */
 package org.openhab.binding.tr064.internal.phonebook;
 
+import static java.util.Comparator.comparing;
+
 import java.net.URI;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.core.config.core.ConfigOptionProvider;
 import org.openhab.core.config.core.ParameterOption;
+import org.openhab.core.i18n.LocalizedKey;
 import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.profiles.Profile;
 import org.openhab.core.thing.profiles.ProfileCallback;
@@ -33,8 +37,13 @@ import org.openhab.core.thing.profiles.ProfileFactory;
 import org.openhab.core.thing.profiles.ProfileType;
 import org.openhab.core.thing.profiles.ProfileTypeProvider;
 import org.openhab.core.thing.profiles.ProfileTypeUID;
+import org.openhab.core.thing.profiles.i18n.ProfileTypeI18nLocalizationService;
+import org.openhab.core.util.BundleResolver;
 import org.openhab.core.util.UIDUtils;
+import org.osgi.framework.Bundle;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -50,6 +59,19 @@ public class PhonebookProfileFactory implements ProfileFactory, ProfileTypeProvi
     private final Logger logger = LoggerFactory.getLogger(PhonebookProfileFactory.class);
     private final Map<ThingUID, PhonebookProvider> phonebookProviders = new ConcurrentHashMap<>();
 
+    private final Map<LocalizedKey, ProfileType> localizedProfileTypeCache = new ConcurrentHashMap<>();
+
+    private final ProfileTypeI18nLocalizationService profileTypeI18nLocalizationService;
+    private final Bundle bundle;
+
+    @Activate
+    public PhonebookProfileFactory(
+            final @Reference ProfileTypeI18nLocalizationService profileTypeI18nLocalizationService,
+            final @Reference BundleResolver bundleResolver) {
+        this.profileTypeI18nLocalizationService = profileTypeI18nLocalizationService;
+        this.bundle = bundleResolver.resolveBundle(PhonebookProfileFactory.class);
+    }
+
     @Override
     public @Nullable Profile createProfile(ProfileTypeUID profileTypeUID, ProfileCallback callback,
             ProfileContext profileContext) {
@@ -58,12 +80,31 @@ public class PhonebookProfileFactory implements ProfileFactory, ProfileTypeProvi
 
     @Override
     public Collection<ProfileTypeUID> getSupportedProfileTypeUIDs() {
-        return Collections.singleton(PhonebookProfile.PHONEBOOK_PROFILE_TYPE_UID);
+        return Set.of(PhonebookProfile.PHONEBOOK_PROFILE_TYPE_UID);
     }
 
     @Override
     public Collection<ProfileType> getProfileTypes(@Nullable Locale locale) {
-        return Collections.singleton(PhonebookProfile.PHONEBOOK_PROFILE_TYPE);
+        return Set.of(createLocalizedProfileType(PhonebookProfile.PHONEBOOK_PROFILE_TYPE, locale));
+    }
+
+    private ProfileType createLocalizedProfileType(ProfileType profileType, @Nullable Locale locale) {
+        final LocalizedKey localizedKey = new LocalizedKey(profileType.getUID(),
+                locale != null ? locale.toLanguageTag() : null);
+
+        final ProfileType cachedlocalizedProfileType = localizedProfileTypeCache.get(localizedKey);
+        if (cachedlocalizedProfileType != null) {
+            return cachedlocalizedProfileType;
+        }
+
+        final ProfileType localizedProfileType = profileTypeI18nLocalizationService.createLocalizedProfileType(bundle,
+                profileType, locale);
+        if (localizedProfileType != null) {
+            localizedProfileTypeCache.put(localizedKey, localizedProfileType);
+            return localizedProfileType;
+        } else {
+            return profileType;
+        }
     }
 
     /**
@@ -90,16 +131,17 @@ public class PhonebookProfileFactory implements ProfileFactory, ProfileTypeProvi
         }
     }
 
-    private Stream<ParameterOption> createPhonebookList(Map.Entry<ThingUID, PhonebookProvider> entry) {
+    private List<ParameterOption> createPhonebookList(Map.Entry<ThingUID, PhonebookProvider> entry) {
         String thingUid = UIDUtils.encode(entry.getKey().toString());
         String thingName = entry.getValue().getFriendlyName();
 
-        Stream<ParameterOption> parameterOptions = entry.getValue().getPhonebooks().stream()
+        List<ParameterOption> parameterOptions = entry.getValue().getPhonebooks().stream()
                 .map(phonebook -> new ParameterOption(thingUid + ":" + UIDUtils.encode(phonebook.getName()),
-                        thingName + " " + phonebook.getName()));
+                        thingName + " - " + phonebook.getName()))
+                .collect(Collectors.toList());
 
-        if (parameterOptions.count() > 0) {
-            return Stream.concat(Stream.of(new ParameterOption(thingUid, thingName)), parameterOptions);
+        if (parameterOptions.size() > 0) {
+            parameterOptions.add(new ParameterOption(thingUid, thingName));
         }
 
         return parameterOptions;
@@ -110,8 +152,12 @@ public class PhonebookProfileFactory implements ProfileFactory, ProfileTypeProvi
             @Nullable Locale locale) {
         if (uri.getSchemeSpecificPart().equals(PhonebookProfile.PHONEBOOK_PROFILE_TYPE_UID.toString())
                 && s.equals(PhonebookProfile.PHONEBOOK_PARAM)) {
-            return phonebookProviders.entrySet().stream().flatMap(this::createPhonebookList)
-                    .collect(Collectors.toSet());
+            List<ParameterOption> parameterOptions = new ArrayList<>();
+            for (Map.Entry<ThingUID, PhonebookProvider> entry : phonebookProviders.entrySet()) {
+                parameterOptions.addAll(createPhonebookList(entry));
+            }
+            parameterOptions.sort(comparing(o -> o.getLabel()));
+            return parameterOptions;
         }
         return null;
     }
